--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -31,7 +31,7 @@
                 <span class="absolute left-0 z-10 flex items-center justify-center w-10 h-10 -translate-x-1/2 rounded-full text-slate-700 ring-2 ring-white bg-purple-100 ">
                     <svg stroke-width="1" class="w-5 h-5" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
                 </span>
-                <div class="flex flex-col flex-1 gap-0">
+                    <div class="flex flex-col flex-1 gap-0">
                     <h4 class="text-xl font-medium text-slate-700"> Підготовка </h4>
                     <p class="text-base text-slate-500">&ndash; визначиться з типом досліджень</p>
                     <p class="text-base text-slate-500">&ndash; вибрати матеріал для діагностики (з огляду на клінічні ознаки, особливості захворювання і шлях збудника)</p>
@@ -44,6 +44,7 @@
                         <img src="../../../../assets/images/containers/eppendorf.png" class="w-24 lg:w-40" alt="eppendorf">
                         <img src="../../../../assets/images/containers/aplicator.png" class="w-24 lg:w-40" alt="aplicator">
                         <img src="../../../../assets/images/containers/zond.png" class="w-24 lg:w-40" alt="zond">
+                    </div>
                     </div>
                 </li>
                 <li role="article" class="relative pl-8 ">
