update images and guide page

--- a/src/app/components/pages/license/license.component.html
+++ b/src/app/components/pages/license/license.component.html
@@ -14,10 +14,10 @@
                 України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну
                 перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
 
-            <h4 class="font-bold text-2xl text-center my-4">Сертифікат визнання вимірювальних можливостей</h4>
+            <h4 class="font-bold text-2xl text-center my-8 mt-20">Сертифікат визнання вимірювальних можливостей</h4>
             <img src="../../../../assets/images/main/doc_certificate.png" class="mx-auto" alt="Сертифікат визнання вимірювальних можливостей">
 
-            <h4 class="font-bold text-2xl text-center my-2">Акт санітарно-епідеміологічного обстеження об'єкта</h4>
+            <h4 class="font-bold text-2xl text-center my-2 mt-20">Акт санітарно-епідеміологічного обстеження об'єкта</h4>
             <app-slideshow [images]="[
                 '../../../../assets/images/license/1.png',
                 '../../../../assets/images/license/2.png',
@@ -30,7 +30,7 @@
                 ]">
             </app-slideshow>
 
-            <h4 class="font-bold text-2xl text-center my-4">Перелік вимірювальних можливостей</h4>
+            <h4 class="font-bold text-2xl text-center my-2 mt-20">Перелік вимірювальних можливостей</h4>
             <app-slideshow [images]="[
             '../../../../assets/images/license/act1.png',
             '../../../../assets/images/license/act2.png',
@@ -38,6 +38,18 @@
             '../../../../assets/images/license/act4.png',
             '../../../../assets/images/license/act5.png',
             '../../../../assets/images/license/act6.png',
+            '../../../../assets/images/license/act7.png',
+            '../../../../assets/images/license/act8.png',
+            '../../../../assets/images/license/act9.png',
+            '../../../../assets/images/license/act10.png',
+            '../../../../assets/images/license/act11.png',
+            '../../../../assets/images/license/act12.png',
+            '../../../../assets/images/license/act13.png',
+            '../../../../assets/images/license/act14.png',
+            '../../../../assets/images/license/act15.png',
+            '../../../../assets/images/license/act16.png',
+            '../../../../assets/images/license/act17.png',
+            '../../../../assets/images/license/act18.png',
             ]">
             </app-slideshow>
         </div>
