--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -13,9 +13,9 @@
 @media screen and (max-width: 650px) {
     .gradient-button-green {
         font-size: 10px;
-        padding: 10px 20px;
+        // padding: 10px 20px;
         letter-spacing: 1px;
-        margin: 0 5% 0 0;
+        // margin: 0 5% 0 0;
     }
     .gradient-button-blue {
         font-size: 10px;
