--- a/src/app/components/pages/license/license.component.html
+++ b/src/app/components/pages/license/license.component.html
@@ -15,9 +15,20 @@
                 перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
 
             <h4 class="font-bold text-2xl text-center my-8 mt-20">Сертифікат визнання вимірювальних можливостей</h4>
-            <img src="../../../../assets/images/main/doc_certificate.png" class="mx-auto" alt="Сертифікат визнання вимірювальних можливостей">
+            <img src="../../../../assets/images/main/doc_certificate.png" class="mx-auto w-96" alt="Сертифікат визнання вимірювальних можливостей">
 
             <h4 class="font-bold text-2xl text-center my-2 mt-20">Акт санітарно-епідеміологічного обстеження об'єкта</h4>
+            <app-slideshow [images]="[
+            '../../../../assets/images/license/act1.png',
+            '../../../../assets/images/license/act2.png',
+            '../../../../assets/images/license/act3.png',
+            '../../../../assets/images/license/act4.png',
+            '../../../../assets/images/license/act5.png',
+            '../../../../assets/images/license/act6.png',
+            ]">
+            </app-slideshow>
+
+            <h4 class="font-bold text-2xl text-center my-2 mt-20">Перелік вимірювальних можливостей</h4>
             <app-slideshow [images]="[
                 '../../../../assets/images/license/1.png',
                 '../../../../assets/images/license/2.png',
@@ -27,30 +38,17 @@
                 '../../../../assets/images/license/6.png',
                 '../../../../assets/images/license/7.png',
                 '../../../../assets/images/license/8.png',
+                '../../../../assets/images/license/9.png',
+                '../../../../assets/images/license/10.png',
+                '../../../../assets/images/license/11.png',
+                '../../../../assets/images/license/12.png',
+                '../../../../assets/images/license/13.png',
+                '../../../../assets/images/license/14.png',
+                '../../../../assets/images/license/15.png',
+                '../../../../assets/images/license/16.png',
+                '../../../../assets/images/license/17.png',
+                '../../../../assets/images/license/18.png',
                 ]">
-            </app-slideshow>
-
-            <h4 class="font-bold text-2xl text-center my-2 mt-20">Перелік вимірювальних можливостей</h4>
-            <app-slideshow [images]="[
-            '../../../../assets/images/license/act1.png',
-            '../../../../assets/images/license/act2.png',
-            '../../../../assets/images/license/act3.png',
-            '../../../../assets/images/license/act4.png',
-            '../../../../assets/images/license/act5.png',
-            '../../../../assets/images/license/act6.png',
-            '../../../../assets/images/license/act7.png',
-            '../../../../assets/images/license/act8.png',
-            '../../../../assets/images/license/act9.png',
-            '../../../../assets/images/license/act10.png',
-            '../../../../assets/images/license/act11.png',
-            '../../../../assets/images/license/act12.png',
-            '../../../../assets/images/license/act13.png',
-            '../../../../assets/images/license/act14.png',
-            '../../../../assets/images/license/act15.png',
-            '../../../../assets/images/license/act16.png',
-            '../../../../assets/images/license/act17.png',
-            '../../../../assets/images/license/act18.png',
-            ]">
             </app-slideshow>
         </div>
     </div>
